[package]
name = "large-json-array"
version = "0.1.0"
edition = "2024"
authors = ["Ilya Evlanov <evlanov.ilya@gmail.com>"]
license = "MIT"
description = "A streaming JSON‐array parser that yields one object at a time"
repository = "https://github.com/bambolelooo/large-json-array"
keywords = ["json", "stream", "parser"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
serde_json = "1.0.140"
thiserror = "2.0.12"


[dev-dependencies]
fake = { version = "4.3.0", features = ["chrono", "derive", "geo", "http", "uuid"] }
json-writer = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }